# address-recognition

./: .gitignore  CMakeLists.txt
data/: czZIP.txt  foo.txt
data/extracted/city/: CZ.txt  DE.txt  FR.txt
data/extracted/zip/: CZ.txt  DE.txt  FR.txt
data/extracted/zip_town/: cz.txt
data/input/: 4.txt  5.txt  6.txt  7.txt  8.txt
data/raw/: CZ.txt  DE.txt
data/results/: res1.txt
data/tries/city/: CZ.trie  DE.trie
data/tries/zip/: CZ.trie  DE.trie  FR.trie
data/txt/: 35 prodej BMW - Mirek - kupni smlouva.doc  Nájemní smlouva.doc  Priloha  2 - Kupni smlouva.doc  loremIpsum1.txt
include/: Commons.hpp  Parser.hpp  Token.hpp  Tokenizer.hpp  Trie.hpp  TrieManager.hpp  enums.hpp  reference.hpp
src/: Commons.cpp  Parser.cpp  Token.cpp  Tokenizer.cpp  Trie.cpp  TrieManager.cpp  main.cpp
test/: CMakeLists.txt  ParserTest.cpp  RuntimeParserTest.cpp  TokenTest.cpp  TokenizerTest.cpp  TrieManagerTest.cpp  TrieTest.cpp
test/data/: 5digit.txt  5digit2.txt  dummyTestInput.txt  mtpleTestInput.txt  nospacesTestInput.txt  sampleTestInput.txt  separatorTestInput.txt
